# ocelescope-module-template

./: .env.example  .gitignore  .npmrc  README.md  compose.yaml  docker-bake.hcl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: publish-npm.yml  publish-pypi.yml  release.yml
app/: .env.example  next.config.ts  ocelescope.config.ts  package.json  tsconfig.json
app/pages/: [[...slug]].tsx  _app.tsx  _document.tsx
app/pages/api/: events.ts
backend-modules/example/: pyproject.toml
backend-modules/example/src/ocelescope_module_example/: module.py  routes.py
docker/: backend.Dockerfile  entrypoint.sh  frontend.Dockerfile
frontend-modules/example/: orval.config.ts  package.json  tsconfig.json  tsdown.config.ts
frontend-modules/example/src/: index.ts
frontend-modules/example/src/lib/: fetcher.ts
frontend-modules/example/src/routes/: Hello.tsx
