[project]
name = "ocelescope-instance"
version = "0.1.0"
description = "An Ocelescope instance: the published backend host plus local modules"
requires-python = ">=3.11"
dependencies = [
  "ocelescope-backend>=0.1.1",
  "ocelescope-module-filter>=0.1.1",
  "ocelescope-module-example",
]

[tool.uv.workspace]
members = ["backend-modules/*"]

[tool.uv.sources]
ocelescope-module-example = { workspace = true }
